--- a/Mentiras_de_Trump/Mentiras_de_Trump.ipynb
+++ b/Mentiras_de_Trump/Mentiras_de_Trump.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Mentiras_de_Trump.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPKeK4m5CRkiCGq9rifRe5u",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -53,12 +65,8 @@
         "## O Artigo:\n",
         "Inicialmente iremos examinar como o artigo nos é apresentado.\n",
         "\n",
-<<<<<<< HEAD
         "![imagem artigo trump.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/imagem%20artigo%20trump.PNG?raw=true)"
       ]
-=======
-        "![imagem artigo trump.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/imagem%20artigo%20trump.PNG)]
->>>>>>> 22e3e5c9e4109b2c0f8a46b1a8da3c60f5fa235f
     },
     {
       "cell_type": "markdown",
@@ -93,13 +101,9 @@
         "    *obs: como o artio está traduzido seu html estará na linguagem original, logo pesquisaremos por iraq.*\n",
         "\n",
         "   O resultado é:\n",
-<<<<<<< HEAD
         "\n",
         "![html mentira.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/html%20mentira.PNG?raw=true)"
       ]
-=======
-        "   ![html mentira.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/html%20mentira.PNG)]
->>>>>>> 22e3e5c9e4109b2c0f8a46b1a8da3c60f5fa235f
     },
     {
       "cell_type": "markdown",
@@ -123,12 +127,8 @@
       },
       "source": [
         "Para melhorar o entendimento da separação destaquei as partes na imagem:\n",
-<<<<<<< HEAD
         "![html mentira sublin.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/html%20mentira%20sublin.PNG?raw=true)"
       ]
-=======
-        "![html mentira sublin.PNG](https://github.com/antoniocruzds/Web-Scraping/blob/master/Mentiras_de_Trump/Img/html%20mentira%20sublin.PNG)]
->>>>>>> 22e3e5c9e4109b2c0f8a46b1a8da3c60f5fa235f
     },
     {
       "cell_type": "markdown",
